# IVP_3DAnimToVideo

./: .gitignore  README.md
ImageSequenceCreation/: CMakeLists.txt
ImageSequenceCreation/data/inputObjects/: monkey.dae  untitled.3ds  untitled.dae
ImageSequenceCreation/src/: SceneGraphVisitor.cpp  SceneGraphVisitor.h  main.cpp  modelviewerqt.cpp  modelviewerqt.h
ImageSequenceCreation/src/viewerosg/: osgadapterwidget.h  osggraphicswindowqt.h  viewerqtcgs.cpp
cmake/: FindLibCgs.cmake
data/inputObjects/: bigMonkey.dae  sphere.dae
src/: modelviewerqt.cpp  modelviewerqt.h  modelviewerqt.ui
src/viewerosg/: osgadapterwidget.cpp  osggraphicswindowqt.cpp  viewerqtcgs.h
webGlPlayer/: index.html  sylvester.js  webGlPlayer.js  webgl-demo.js
webGlPlayer/nbproject/: project.properties  project.xml
